# IA-ELP-2026

./: .env.example  README_POETRY.md  chat_elp.py  pyproject.toml
data/processed/: Estrutura dados IA - Indicadores_Disponibilidade_DTIC.md  Estrutura dados IA - Indicadores_Estratégicos_2024_Planilha.md  Estrutura dados IA - Indicadores_Estratégicos_2024_Servicenow.md  Estrutura dados IA - Indicadores_Estratégicos_2025_Planilha.md  Estrutura dados IA - Indicadores_Estratégicos_2025_Servicenow.md  Estrutura dados IA - Indicadores_Governadoria_Diretoria_Operacional_25.md  Estrutura dados IA - Indicadores_Operacionais_24.md  Estrutura dados IA - Indicadores_Satisfação_DTIC.md  Estrutura dados IA - Iniciativas_Estratégicas_2024_Planilha.md  Estrutura dados IA - Iniciativas_Estratégicas_2024_Servicenow.md  Estrutura dados IA - Iniciativas_Estratégicas_2025_Servicenow.md  Estrutura dados IA - PTA_2024.md  Estrutura dados IA - PTA_2025.md  Estrutura dados IA - PTA_2026.md  Estrutura dados IA - Plano_Aquisição_2024.md  Estrutura dados IA - Plano_Aquisição_2025.md  Estrutura dados IA - Plano_Aquisição_2026.md  Estrutura dados IA - Riscos_Operacionais_2024.md  Estrutura dados IA - Riscos_Operacionais_2025.md
data/raw/: Estrutura dados IA - Indicadores_Disponibilidade_DTIC.csv  Estrutura dados IA - Indicadores_Estratégicos_2024_Planilha.csv  Estrutura dados IA - Indicadores_Estratégicos_2024_Servicenow.csv  Estrutura dados IA - Indicadores_Estratégicos_2025_Planilha.csv  Estrutura dados IA - Indicadores_Estratégicos_2025_Servicenow.csv  (+14 more)
scripts/: ingest.py  teste_ingest.py
(+10 files in other folders)
